--- a/IMKBApp/Podfile
+++ b/IMKBApp/Podfile
@@ -17,6 +17,8 @@ target 'IMKBApp' do
   pod 'Action'
   pod 'Material', '~> 3.1.0'
   pod 'CryptoSwift', '~> 1.4.1'
+  pod 'SwiftChart'
+  pod 'Charts'
 
   target 'IMKBAppTests' do
     inherit! :search_paths
